[package]
name = "gui"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
slint = "1.14.1"
scanner-lib = { path = "../scanner-lib", features = ["deserialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[build-dependencies]
slint-build = "1.14"
